crates/parsing/tests/snapshots/grammar_tests__do-let-binding.snap
---
source: crates/parsing/tests/grammar_tests.rs
expression: result
---
Input: 
do
  let 
    a :: Int
    
Start { kind: DoExpression }
  Start { kind: QualifiedDo }
    Token { kind: DoKw }
  Finish
  Start { kind: OneOrMore }
    Start { kind: DoLetBinding }
      Token { kind: LetKw }
      Start { kind: OneOrMore }
        Start { kind: LetBindingSignature }
          Start { kind: Name }
            Token { kind: Lower }
          Finish
          Token { kind: Colon2 }
          Start { kind: ConstructorType }
            Token { kind: Upper }
          Finish
        Finish
      Finish
    Finish
  Finish
Finish

