crates/parsing/tests/snapshots/grammar_tests__expect_parse@char-binder.input.snap
---
source: crates/parsing/tests/grammar_tests.rs
expression: result
input_file: crates/parsing/tests/inputs/passing/binder/char-binder.input
---
Input: 'a'
Start { kind: LiteralBinder }
  Token { kind: LiteralChar }
Finish

