crates/parsing/tests/snapshots/grammar_tests__expect_parse@complex-binder.input.snap
---
source: crates/parsing/tests/grammar_tests.rs
expression: result
input_file: crates/parsing/tests/inputs/passing/binder/complex-binder.input
---
Input: Tuple (Cons 0 Nil) (Cons 1 Nil)
Start { kind: ConstructorBinder }
  Start { kind: QualifiedName }
    Start { kind: NameRef }
      Token { kind: Upper }
    Finish
  Finish
  Start { kind: OneOrMore }
    Start { kind: ParenthesizedBinder }
      Token { kind: LeftParenthesis }
      Start { kind: ConstructorBinder }
        Start { kind: QualifiedName }
          Start { kind: NameRef }
            Token { kind: Upper }
          Finish
        Finish
        Start { kind: OneOrMore }
          Start { kind: LiteralBinder }
            Token { kind: LiteralInteger }
          Finish
          Start { kind: ConstructorBinder }
            Start { kind: NameRef }
              Token { kind: Upper }
            Finish
          Finish
        Finish
      Finish
      Token { kind: RightParenthesis }
    Finish
    Start { kind: ParenthesizedBinder }
      Token { kind: LeftParenthesis }
      Start { kind: ConstructorBinder }
        Start { kind: QualifiedName }
          Start { kind: NameRef }
            Token { kind: Upper }
          Finish
        Finish
        Start { kind: OneOrMore }
          Start { kind: LiteralBinder }
            Token { kind: LiteralInteger }
          Finish
          Start { kind: ConstructorBinder }
            Start { kind: NameRef }
              Token { kind: Upper }
            Finish
          Finish
        Finish
      Finish
      Token { kind: RightParenthesis }
    Finish
  Finish
Finish

