crates/parsing/tests/snapshots/grammar_tests__expect_parse@empty-do-in-array.input.snap
---
source: crates/parsing/tests/grammar_tests.rs
expression: result
input_file: crates/parsing/tests/inputs/failing/expression/empty-do-in-array.input
---
Input: [ do ]

Start { kind: LiteralExpression }
  Start { kind: LiteralArray }
    Token { kind: LeftSquare }
    Start { kind: Separated }
      Start { kind: DoExpression }
        Start { kind: QualifiedDo }
          Token { kind: DoKw }
        Finish
        Token { kind: LayoutStart }
        Start { kind: OneOrMore }
          Error { message: "expected DoStatement" }
        Finish
        Token { kind: LayoutEnd }
      Finish
    Finish
    Token { kind: RightSquare }
  Finish
Finish

