crates/parsing/tests/snapshots/grammar_tests__expect_parse@empty-row.input.snap
---
source: crates/parsing/tests/grammar_tests.rs
expression: result
input_file: crates/parsing/tests/inputs/passing/type/empty-row.input
---
Input: ()

Start { kind: RowType }
  Start { kind: Wrapped }
    Token { kind: LeftParenthesis }
    Start { kind: RowInner }
    Finish
    Token { kind: RightParenthesis }
  Finish
Finish

